# rstm

./: ABORT  ABOUT  AUTHORS  AdaptivityPolicies.md  AvailableAlgorithms.md  AvailableApps.md  BuildingRSTM.md  CMakeLists.txt  Defines.sparc  Defines.x86  EXTENDING  ITMSupport.md  KnownIssues.md  Makefile  Makefile.am  Makefile.common  Makefile.sparc  Makefile.x86  ProjectHome.md  README  RunningApps.md  WritingApps.md  configure.ac  lib_gcc_linux_x86_64_opt.mk  lib_gcc_solaris_ia32_opt.mk  lib_gcc_solaris_x86_64_dbg.mk  libitm.mk.cmake  run_tree.sh  stubbs.c
alt-license/: OracleSkyStuff.hpp
bench/: CounterBench.cpp  DList.hpp  DListBench.cpp  Disjoint.hpp  DisjointBench.cpp  ForestBench.cpp  Hash.hpp  HashBench.cpp  List.hpp  ListBench.cpp  MCASBench.cpp  Makefile  ReadNWrite1Bench.cpp  ReadWriteNBench.cpp  Rules.mk  Targets.mk  Tree.hpp  TreeBench.cpp  TreeOverwriteBench.cpp  TypeTest.cpp  WWPathologyBench.cpp  bmconfig.hpp  bmharness.cpp  bmharness.hpp  sandbox.mk.cmake
branches/itm/: build.mk  (+1 more)
branches/itm/lib/: AdapTM.cpp  CommonOrec.cpp  Makefile.am  NOrecHB.cpp  OrecEager.hpp  OrecEagerHour.cpp  OrecLazy.cpp  WBMMPolicy.cpp  WBMMPolicy.hpp  cm.hpp  inst-common.hpp  inst-readonly.hpp  inst-stackfilter.hpp  inst-writer.hpp  tmabi-weak.hpp
branches/luke-sandbox/libssigs/: CMakeLists.txt  ssigs.cpp
branches/luke-sandbox/libssigs/test/: CMakeLists.txt  handle_sigsegv.S  handler.S  handler.c  test.cpp
branches/luked-at/libitm2stm/: Makefile.am  configure.ac  libitm-5.12.cpp  libitm-5.8.cpp
branches/luked-at/libstm/: BitFilter.hpp  Makefile.am  MiniVector.hpp  UndoLog.hpp  UserConfig.cmake  ValueList.hpp  WBMMPolicy.cpp  WBMMPolicy.hpp  WriteSet.hpp  cm.hpp  configure.ac  hooks.cpp  inst.hpp  irrevocability.cpp  lib_globals.hpp  libstm.pc.in  macros.hpp  metadata.hpp  platform.hpp  profiling.hpp  txthread.cpp  txthread.hpp  types.cpp
branches/luked-at/libstm/algs/: RedoRAWUtils.hpp  algs.hpp  cgl.cpp  ctokenturbo.cpp  mcs.cpp  orecala.cpp  pipeline.cpp  ticket.cpp  tml.cpp
branches/luked-at/libstm/policies/: policies.hpp
branches/nextrel/libstm/: CMakeLists.txt  cm.hpp  inst.cpp  inst.hpp  irrevocability.cpp  profiling.cpp  profiling.hpp  txthread.cpp  types.cpp
branches/nextrel/libstm/algs/: RedoRAWUtils.hpp  algs.hpp  biteager.cpp  biteagerredo.cpp  bitlazy.cpp  byear.cpp  byeau.cpp  byteeager.cpp  byteeagerredo.cpp  bytelazy.cpp  cgl.cpp  ctoken.cpp  ctokenturbo.cpp  llt.cpp  mcs.cpp  nano.cpp  norec.cpp  norecprio.cpp  oreau.cpp  orecala.cpp  oreceager.cpp  oreceagerredo.cpp  orecela.cpp  orecfair.cpp  oreclazy.cpp  pipeline.cpp  profileapp.cpp  profiletm.cpp  ringala.cpp  ringsw.cpp  serial.cpp  swiss.cpp  ticket.cpp  tli.cpp  tml.cpp  tml_inline.hpp  tmllazy.cpp
branches/nextrel/libstm/policies/: policies.cpp  static.cpp
cmake/: UserOverrides.cmake
common/: platform.hpp
include/: ThreadLocal.hpp  abstract_compiler.hpp  abstract_cpu.hpp  abstract_timing.hpp  cglapi.hpp  library_fptrinst.hpp  library_inst.hpp  macros.hpp  platform.hpp  rstm.hpp  stm.h  stmapi.hpp  stmapi_fptr.hpp  tlsapi.hpp  txthread.hpp
lib/: AdapTM.cpp  AdapTM_gen.pl  CGL.cpp  CToken.cpp  CTokenTurbo.cpp  Cohorts.cpp  CohortsEager.cpp  Common.cpp  CommonLazy.cpp  LLT.cpp  Macros.hpp  Makefile  MiniVector.hpp  NOrec.cpp  NOrec.hpp  NOrecBackoff.cpp  NOrecHB.cpp  NOrecHour.cpp  OrecALA.cpp  OrecELA.cpp  OrecEager.cpp  OrecEager.hpp  OrecEagerBackoff.cpp  OrecEagerHB.cpp  OrecEagerHour.cpp  OrecEagerRedo.cpp  OrecLazy.cpp  OrecLazy.hpp  OrecLazyBackoff.cpp  OrecLazyHB.cpp  OrecLazyHour.cpp  Rules.mk  TML.cpp  UndoLog.hpp  UserCallbackLog.hpp  ValueList.hpp  WriteSet.hpp  adaptivity.cpp  adaptivity.hpp  alg.hpp  (+50 more)
libitm/: Makefile.am  checkpoint-intel.S  locks.cpp  locks.h  stm-cgl.cpp
libitm-4.7.2/: beginend.cc  libitm_i.h  method-wer.cc
libitm2stm/: CMakeLists.txt  Scope.cpp  Transaction.h  Utilities.h  dtmc.cmake  dtmc.cpp  libitm-5.1,5.cpp  libitm-5.11.cpp  libitm-5.12.cpp  libitm-5.13,14.cpp  libitm-5.16.cpp  libitm-5.17.cpp  libitm-5.7.cpp  libitm-5.8.cpp  libitm-5.9.cpp  libitm.h  libtanger-stm.public-symbols
libitm2stm/arch/x86/: _ITM_beginTransaction_no_td.S  checkpoint.h
libotm2stm/: OTM_Inliner.i  StackLogger.hpp  TypeAlignments.hpp  Utilities.hpp  alloc.cpp  onelock.cpp  otm2stm.cpp  otm2stm_singlelock.cpp
libstm/: AdapTM_gen.pl  BasicTypes.hpp  BitEagerRedo.cpp  BitFilter.hpp  BitFilter64.hpp  BitLocks.hpp  ByEAR.cpp  ByEAU.hpp  ByEAUHA.cpp  ByteEager.cpp  ByteLazy.cpp  ByteLocks.hpp  CMakeLists.txt  CTokenTurboQ.cpp  Cohorts2.cpp  CohortsENQ.cpp  CohortsLI.cpp  CohortsNoorder.cpp  Constants.hpp  Globals.hpp  LLT_amd64.cpp  Makefile  MiniVector.hpp  NOrec.hpp  NOrecBackoff.cpp  OrEAUHour.cpp  OrecELA.cpp  OrecEager.cpp  OrecEager_amd64.cpp  OrecLazy.hpp  PMU.cpp  PMU.hpp  Pipeline.cpp  ProfileApp.hpp  RRecs.cpp  RRecs.hpp  Serial.cpp  SimpleQueue.hpp  TLI.cpp  Ticket.cpp  (+74 more)
libstm/algs/: BitEager.cpp  BitEagerRedo.cpp  BitLazy.cpp  ByEAR.cpp  ByEAU.hpp  ByEAUBackoff.cpp  ByEAUFCM.cpp  ByEAUHour.cpp  ByteEager.cpp  ByteEagerRedo.cpp  ByteLazy.cpp  CGL.cpp  CToken.cpp  CTokenELA.cpp  CTokenNOrec.cpp  CTokenQ.cpp  CTokenTurbo.cpp  CTokenTurboELA.cpp  CTokenTurboQ.cpp  Cohorts.cpp  Cohorts2.cpp  Cohorts3.cpp  CohortsEF.cpp  CohortsEN.cpp  CohortsEN2.cpp  CohortsEN2Q.cpp  CohortsENQ.cpp  CohortsEager.cpp  CohortsFilter.cpp  CohortsLF.cpp  CohortsLI.cpp  CohortsLN.cpp  CohortsLNI.cpp  CohortsLNI2.cpp  CohortsLNI2Q.cpp  CohortsLNI2QX.cpp  CohortsLNIQX.cpp  CohortsLNQX.cpp  CohortsLazy.cpp  CohortsNOrec.cpp  (+102 more)
libstm/policies/: static.cpp
mesh/: CMakeLists.txt
orig/: CMakeLists.txt
stamp-0.9.10/: CMakeLists.txt  Makefile  Makefile.common  Makefile.stamp  makecsv.sh  makeeps.sh  makepdf.sh  run_all.sh  sandbox.mk.cmake
stamp-0.9.10_patched/: Genome.mk  Kmeans.mk  Makefile  Rules.mk  Vacation.mk
testsuite/: Makefile.am
testsuite/libcgl.tests/: Makefile.am
trunk/: CMakeLists.txt
wiki/: AdaptivityPolicies.wiki  AvailableAlgorithms.wiki  AvailableApps.wiki  BuildingRSTM.wiki  ITMSupport.wiki  KnownIssues.wiki  PageName.wiki  RunningApps.wiki  WritingApps.wiki
(+1172 files in other folders)
