ACLOCAL_AMFLAGS = -I m4
lib_LTLIBRARIES = libitm2stm.la
libitm2stm_la_SOURCES = BlockOperations.cpp Extras.cpp Scope.cpp \
						Transaction.cpp libitm-5.1,5.cpp libitm-5.2.cpp \
						libitm-5.3.cpp libitm-5.4.cpp libitm-5.7.cpp \
						libitm-5.8.cpp libitm-5.9.cpp libitm-5.10.cpp \
						libitm-5.11.cpp libitm-5.12.cpp libitm-5.13,14.cpp \
						libitm-5.15.cpp libitm-5.16.cpp libitm-5.17.cpp