AC_PREREQ(2.68)
AC_INIT([libitm2stm], [0.1], [luked@cs.rochester.edu])
AC_CONFIG_SRCDIR(libitm.h)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_MACRO_DIR(config/m4)
AM_INIT_AUTOMAKE([1.11 foreign silent-rules subdir-objects])
AM_PROG_AR
LT_INIT([disable-shared])
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT